# crafting-interpreters

./: .gitignore  Planning.md  README.md  Software_installation.md  requirements.txt
homework_planner/: crafting-interpreters.ics  generate_planning.py  generate_tasks.py  homework_planner.py  tasks.yaml
homework_planner/output/: homework.md  homework_discord.md
java-scanner-with-gradle-template/: .gitignore
java-scanner-with-gradle-template/parser/: build.gradle
java-scanner-with-gradle-template/parser/src/test/java/org/codersonly/lox/parser/: ParserTest.java
java-scanner-with-gradle-template/scanner/src/test/resources/: string-assignment.lox
minutes-of-meeting/: chapter_17.md  mom-chapter-11.md  mom-chapter-13.md  mom-chapter-15.md  mom-chapter-20.md  mom-chapter-23.md  mom-chapter-26.md  mom-chapter22.md  mom_chapter_10.md  mom_chapter_12.md  mom_chapter_14.md  mom_chapter_17.md  mom_chapter_9_chat.md  mom_week_06.md  mom_week_8_chat.md
minutes-of-meeting/chapter_01/: kick_off_slides.md  mom_week_1.md
minutes-of-meeting/chapter_02/: array.lox  mom.md
minutes-of-meeting/chapter_04/: mom_week_04.md
minutes-of-meeting/chapter_05/: mom_week_05.md
minutes-of-meeting/week1/: Chat_dump_week_1.md  kick_off_slides.md
resources/: Helpful-Links.md  lox_emulators
resources/images/: banner.xcf
resources/java-scanner-with-gradle-template/: README.md  settings.gradle
resources/java-scanner-with-gradle-template/scanner/: build.gradle
resources/software_installation/: CMakeLists.txt  Software_installation.md
(+5 files in other folders)
